// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`winCodeSign: 1.0.0 > nsis 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW Setup 1.0.0.exe",
      "safeArtifactName": "TestApp-Setup-1.0.0.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 1.0.0.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.0.0.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW Setup 1.0.0.exe",
          },
        ],
        "path": "Test App ßW Setup 1.0.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`winCodeSign: 1.0.0 > nsis 2`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW Setup 1.0.1.exe",
      "safeArtifactName": "TestApp-Setup-1.0.1.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 1.0.1.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-1.0.1.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW Setup 1.0.1.exe",
          },
        ],
        "path": "Test App ßW Setup 1.0.1.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`winCodeSign: 1.0.0 > nsis 3`] = `
{
  "files": [
    {
      "sha512": "@sha512",
      "size": "@size",
    },
  ],
  "path": "Test App ßW Setup 1.0.1.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`winCodeSign: 1.0.0 > nsis 4`] = `
[
  "Test App ßW Setup 1.0.1.exe",
]
`;

exports[`winCodeSign: 1.0.0 > web installer 1`] = `
{
  "win": [
    {
      "file": "Test App ßW Web Setup 1.0.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.0.0.exe",
      "updateInfo": {
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.0-arm64.nsis.7z",
            "path": "TestApp-1.0.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.0-x64.nsis.7z",
            "path": "TestApp-1.0.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.0.0-x64.nsis.7z",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.0.0-arm64.nsis.7z",
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.0.0.exe",
          },
        ],
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.0-arm64.nsis.7z",
            "path": "TestApp-1.0.0-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.0-x64.nsis.7z",
            "path": "TestApp-1.0.0-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "Test App ßW Web Setup 1.0.0.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.0",
      },
    },
  ],
}
`;

exports[`winCodeSign: 1.0.0 > web installer 2`] = `
{
  "win": [
    {
      "file": "Test App ßW Web Setup 1.0.1.exe",
      "safeArtifactName": "TestApp-WebSetup-1.0.1.exe",
      "updateInfo": {
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.1-arm64.nsis.7z",
            "path": "TestApp-1.0.1-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.1-x64.nsis.7z",
            "path": "TestApp-1.0.1-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
      },
    },
    {
      "arch": "x64",
      "file": "TestApp-1.0.1-x64.nsis.7z",
    },
    {
      "arch": "arm64",
      "file": "TestApp-1.0.1-arm64.nsis.7z",
    },
    {
      "file": "latest.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "url": "Test App ßW Web Setup 1.0.1.exe",
          },
        ],
        "packages": {
          "arm64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.1-arm64.nsis.7z",
            "path": "TestApp-1.0.1-arm64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
          "x64": {
            "blockMapSize": "@blockMapSize",
            "file": "TestApp-1.0.1-x64.nsis.7z",
            "path": "TestApp-1.0.1-x64.nsis.7z",
            "sha512": "@sha512",
            "size": "@size",
          },
        },
        "path": "Test App ßW Web Setup 1.0.1.exe",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.0.1",
      },
    },
  ],
}
`;

exports[`winCodeSign: 1.0.0 > web installer 3`] = `
{
  "files": [
    {
      "sha512": "@sha512",
    },
  ],
  "packages": {
    "arm64": {
      "blockMapSize": "@blockMapSize",
      "file": "TestApp-1.0.1-arm64.nsis.7z",
      "path": "TestApp-1.0.1-arm64.nsis.7z",
      "sha512": "@sha512",
      "size": "@size",
    },
    "x64": {
      "blockMapSize": "@blockMapSize",
      "file": "TestApp-1.0.1-x64.nsis.7z",
      "path": "TestApp-1.0.1-x64.nsis.7z",
      "sha512": "@sha512",
      "size": "@size",
    },
  },
  "path": "Test App ßW Web Setup 1.0.1.exe",
  "releaseDate": "@releaseDate",
  "sha512": "@sha512",
  "version": "1.0.1",
}
`;

exports[`winCodeSign: 1.0.0 > web installer 4`] = `
[
  "Test App ßW Web Setup 1.0.1.exe",
  "package-1.0.1.7z",
]
`;
